Code cleanup
Signed-off-by: Paul-Erik Törrönen <poltsi@poltsi.fi>